fixed spacing between login and create acct button

--- a/src/app/traveler/traveler-login/traveler-login.component.css
+++ b/src/app/traveler/traveler-login/traveler-login.component.css
@@ -26,3 +26,8 @@
       text-align: center;
       padding-bottom: 1rem;
   }
+
+  .btn-block {
+    margin: 5px;
+    margin-left: 0px;
+  }
